# ideas_generator

./: .env.example  .gitignore  README.md  devtools_report.md  pyproject.toml
.github/workflows/: weekly-ideas.yml
ideas_generator/: business_fit.py  cli.py  cluster.py  config.py  db.py  devtools_report.py  embed.py  filters.py  ingest_window.py  llm_screen.py  llm_util.py  models.py  normalize.py  report.py  score.py
ideas_generator/connectors/: __init__.py  base.py  devto.py  discourse.py  github_issues.py  gitlab_issues.py  hn.py  lemmy.py  mastodon.py  product_hunt.py  reddit.py  rss_feeds.py  stackexchange.py
scripts/: weekly-run.sh
tests/: conftest.py  test_business_fit.py  test_config_no_product_hunt.py  test_dotenv_bare_keys.py  test_filters.py  test_github_issues.py  test_gitlab_issues.py  test_ingest_window.py  test_llm_parse.py  test_llm_util.py  test_rss_devto.py  test_score.py
