[project]
name = "ideas-generator"
version = "0.1.0"
description = "Aggregate business problems from public sources, cluster, score, and report."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "numpy>=1.26",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "fastembed>=0.4",
  "praw>=7.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
ideas = "ideas_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ideas_generator"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
